--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/pesto-pasta.html">Pesto Pasta</a></li>
-        <li><a href="./recipes/chicago-style-hotdog.html">Chicago-Style Hot Dog</a></li>
-    </ul>
+    <div class="container">
+        <h1>Odin Recipes</h1>
+        <ul class="list-container">
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/pesto-pasta.html">Pesto Pasta</a></li>
+            <li><a href="./recipes/chicago-style-hotdog.html">Chicago-Style Hot Dog</a></li>
+        </ul>
+    </div>
 </body>
 </html>
